# Rev_10

./: .env.example  .env.vercel  .gitignore  FIX-500-ERROR.md  GUIA_LOCAL.md  README_SUPABASE.md  SETUP_RAPIDO.md  atualizar_bootstrap.js  check_db.js  debug_login.js  fix_login.js  login_simple_server.js  main_simplified.py  package-lock.json  package.json  pyproject.toml  requirements-django.txt  requirements-flask.txt  requirements-starlette.txt  requirements.txt  reset_senhas.js  run.py  seed_data.py  seed_data_fixed.py  seed_database.js  setup.bat  start.bat  start_bootstrap.bat  start_fixed.bat  start_login_test.bat  start_reset.bat  start_supabase.bat  test_login.js  test_supabase_login.js  time_tracking.db  vercel-multiple.json  vercel.json  verificar_final.js
api/: django.py  flask.py  index.js  index.py  index_clean.py  simple.py  simple_test.py  stable.py  starlette.py  templates.py
api/models/: database.js
api/routes/: admin.js  api.js  auth.js  dashboard.js
app/: auth.py  crud.py  database.py  main.py  models.py  scheduler.py  schemas.py  sharepoint.py  sharepoint_sync.py
static/css/: bootstrap-theme.css  design-tokens.css
templates/: base_bootstrap.html  base_bootstrap_fixed.ejs  dashboard_fixed.ejs  dashboard_improved.ejs  error.ejs  footer_bootstrap.ejs  header_bootstrap.ejs  lancamentos.ejs  login_new.ejs  login_new.html  login_simple.ejs  perfil_view.ejs
templates/admin/: atividades.ejs  categorias.ejs  categorias.html  lancamentos.ejs  lancamentos.html  sharepoint.ejs  usuarios_bootstrap.ejs  usuarios_bootstrap.html
