[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "time-tracking-system"
version = "1.0.0"
description = "Time Tracking System for Vercel"
requires-python = ">=3.8"

dependencies = [
    "fastapi",
    "uvicorn",
    "jinja2",
    "python-multipart"
]

[tool.setuptools]
py-modules = []
